# mcpp

./: .clang-format  .gitignore  CMakeLists.txt
include/: chunk.hpp  chunkmesh.hpp  indice.hpp  input.hpp  mesh.hpp  vertex.hpp  window.hpp  world.hpp
lib/: CMakeLists.txt
lib/glad/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
lib/glfw/src/: Makefile  cmake_install.cmake
lib/glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
src/: chunk.cpp  chunkmesh.cpp  indice.cpp  input.cpp  main.cpp  mesh.cpp  vertex.cpp  window.cpp  world.cpp
